spade-tests/src/snapshots/spade_tests__hir_lowering__argument_list_tests__too_many_args.snap
---
source: spade-tests/src/hir_lowering.rs
---
extern fn test(a: bool, b: bool) -> bool;
fn main() -> bool {
    test(true, true, true)
}


error: Too many arguments. Expected 2, got 3
  ┌─ testinput:3:10
  │
1 │ extern fn test(a: bool, b: bool) -> bool;
  │        ---------------------------------- function defined here
2 │ fn main() -> bool {
3 │     test(true, true, true)
  │          ^^^^^^^^^^^^^^^^
  │          │           │
  │          │           Unexpected argument
  │          Expected 2 arguments
